[package]
name = "oracle-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
hex = "0.4.3"
# rand = "0.8.5"
# reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde_json = "1.0.82"
# tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }
# anyhow = "1.0.32"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
url = "2.2.2"
bcs = "0.1.3"
serde_yaml = "0.9.10"
serde = "1.0.144"
thiserror = "1.0.31"
tokio = { version = "1", features = ["full"] }
dotenv = {version = "0.15.0"}

log = "0.4"
pretty_env_logger = "0.4"
